--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-scroll-parallax": "^3.4.2",
     "react-type-animation": "^3.0.1",
     "sass": "^1.62.0"
   }
